--- a/public/mainPage/index.html
+++ b/public/mainPage/index.html
@@ -198,6 +198,33 @@
         </div>
     </div>
 
+    <!-- Create Project Q1 modal -->
+    <div class="modal fade" id="projectCreationModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="projectCreationModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="projectCreationModalLabel">Project Creation</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="projectCreationForm">
+                        <div id="projectCreationPromptContent">
+                            <label for="projectCreationResponse" class="form-label">Q1. What is the name of your
+                                Project??</label>
+                            <input class="form-control" id="projectCreationResponse" type="text" name="response"
+                                value="New Project 1">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" form="projectCreationForm" class="btn btn-primary">Save and Next</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
