--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -37,11 +37,31 @@
     </nav>
 
     <div class="main border">
+        
         <section class="teammate-container border">
-            <div class="teammate-list">
-                Member List
+
+            <div class="team-member-list">
+                <div class="list-title">
+                    Member List
+                </div>
+                <div class="all-team-member">
+                    <div class="team-member">
+                        <div class="team-member-username"></div>
+                        <div class="image-cropper">
+                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <div class="buttonn">1</div>
+
+
+
         </section>
+
+
+
         <div class="right-side border">
             <section class="chart-container border">
                 <div id="gantt_here" style='width:100%; height:100%;'></div>
@@ -77,44 +97,30 @@
 
 
     <main class="chatroom-box" style="display: none;">
-
-
         <article id="memberAndMessages" class="row">
-
             <section id="member-area" class="col-2">
-
                 <div class="list-title white-word">
                     <div>Teammates</div>
                 </div>
-
                 <div id="member-list" class="white-word">
-
                 </div>
-
             </section>
 
-
             <section id="message-list" class="col">
-
                 <div id="message-box">
-
                 </div>
-
                 <div class="texting-box">
                     <form id="sendMessage">
                         <input type="text" id="text-content" class="text-content white-word">
                         <button id="text-send" type="submit">Send</button>
                     </form>
                 </div>
-
             </section>
-
         </article>
-
         <button type="button" class="quit-chat">Quit Chat</button>
     </main>
 
-    <div class="outer-user-card"></div>
+
 
     <div class="outer-user-card"></div>
     <div class="user-card"></div>
