--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.css" type="text/css">
     <script src="http://cdn.dhtmlx.com/gantt/edge/dhtmlxgantt.js"></script>
-
+    <script src="https://kit.fontawesome.com/19ebb34589.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,39 +28,49 @@
 
 
 
-    <nav class="border">
-        <div class="add-teammate">Add Teammate</div>
-        <div class="remove-teammate">Remove Teammate</div>
-        <div class="quit-team">Quit Team</div>
-        <div class="main-page">Main Page</div>
-        <div class="logout">Logout</div>
-    </nav>
+
 
     <div class="main border">
-        <section class="teammate-container border">
-            <div class="teammate-list">
+
+        <nav class="border">
+            <div class="add-teammate">Add Teammate</div>
+            <div class="remove-teammate">Remove Teammate</div>
+            <div class="quit-team">Quit Team</div>
+            <div class="main-page">Main Page</div>
+            <div class="logout">Logout</div>
+        </nav>
+
+        <div class="project border">
+
+            <section class="teammate-container border">
                 Member List
-            </div>
-        </section>
-        <div class="right-side border">
-            <section class="chart-container border">
-                <div id="gantt_here" style='width:100%; height:100%;'></div>
-            </section>
-            <section class="task-container border">
-                <div class="jira border">
-                    <div class="to-do-list border">
-                        <h4>To Do List</h4>
-                    </div>
-                    <div class="ongoing border">
-                        <h4>Ongoing</h4>
-                    </div>
-                    <div class="finished border">
-                        <h4>Finished</h4>
-                    </div>
+                <div class="teammate-list">
                 </div>
             </section>
+
+            <div class="right-side border">
+
+                <section class="chart-container border">
+                    <div id="gantt_here" style='width:100%; height:100%;'></div>
+                </section>
+
+                <section class="task-list-container border">
+                    <div class="jira border">
+                        <div class="to-do-list border">
+                            <h4>To Do List</h4>
+                        </div>
+                        <div class="ongoing border">
+                            <h4>Ongoing</h4>
+                        </div>
+                        <div class="finished border">
+                            <h4>Finished</h4>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
+
 
 
 
