--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -40,37 +40,41 @@
         <article class="member-and-chart">
 
             <div class="team-member-list">
-                <div class="list-title white-word">Team Member</div>
-                <div class="all-team-member">
-                    <div class="team-member">
-                        <div class="team-member-username white-word">username</div>
-                        <div class="image-cropper">
-                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                <div class="member-list-yop-area">
+                    <div class="list-title white-word">Team Member</div>
+                    <div class="all-team-member">
+                        <div class="team-member">
+                            <div class="team-member-username white-word">username</div>
+                            <div class="image-cropper">
+                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <div class="team-member-username white-word">username</div>
+                            <div class="image-cropper">
+                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <div class="team-member-username white-word">username</div>
+                            <div class="image-cropper">
+                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <div class="team-member-username white-word">username</div>
+                            <div class="image-cropper">
+                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="team-member">
-                        <div class="team-member-username white-word">username</div>
-                        <div class="image-cropper">
-                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                        </div>
-                    </div>
-                    <div class="team-member">
-                        <div class="team-member-username white-word">username</div>
-                        <div class="image-cropper">
-                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                        </div>
-                    </div>
-                    <div class="team-member">
-                        <div class="team-member-username white-word">username</div>
-                        <div class="image-cropper">
-                            <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                        </div>
-                    </div>
-                    
-
                 </div>
+
+                <div class="team-member-button">Bill Start Here</div>
             </div>
 
+
+            
             <div class="main border">
 
                 <div class="right-side border">
@@ -97,7 +101,7 @@
 
     </main>
 
-    <section class="search-user-card" >
+    <section class="search-user-card">
         <div class="search-wrapper">
             <label for="search">Add User Search</label>
             <input type="search" id="search" placeholder="search user with username or email">
