--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,13 @@
 
                         <div class="form-floating mb-3">
                             <input type="text" class="form-control rounded-3" id="username_email"
-                                placeholder="name@example.com">
+                                placeholder="name@example.com" value="user">
                             <label for="username_email">Username / Email</label>
                         </div>
 
                         <div class="form-floating mb-3">
                             <input type="password" class="form-control rounded-3 " id="password"
-                                placeholder="password">
+                                placeholder="password" value="1234">
                             <label for="password">Password</label>
                         </div>
 
