--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -30,8 +30,10 @@
 
 
         <nav class="top-bar">
-            <div class="main-page white-word">LOGO</div>
-            <div class="project-big-name white-word">Project Name</div>
+            <div class="add-teammate white-word">Add Teammate</div>
+            <div class="remove-teammate white-word">Remove Teammate</div>
+            <div class="quit-team white-word">Quit Team</div>
+            <div class="main-page white-word">Main Page</div>
             <div class="logout white-word">Logout</div>
         </nav>
 
