--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Main Page</title>
+    <title>Main - and then...?</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
