--- a/private/mainPage/index.html
+++ b/private/mainPage/index.html
@@ -18,6 +18,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Quicksand:wght@300..700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -26,9 +27,9 @@
         <main id="main-page-area">
 
             <nav id="top-bar" class="row white-word">
-                <div id="and-then-logo" class="col-2">and then...?</div>
+                <div class="main-page white-word" class="col-2" onclick="window.location.reload()">Main Page</div>
                 <div id="notification" class="col-8"></div>
-                <button type="button" id="logout-button" class="col-2">logout</button>
+                <div class="logout white-word" id="logout-button" class="col-2">Logout</div>
             </nav>
 
             <article class="user-project-area">
