--- a/private/projectPage/index.html
+++ b/private/projectPage/index.html
@@ -19,6 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -41,12 +42,9 @@
                 <div class="member-list-area">
                     <div class="list-title white-word">Team Member</div>
                     <div class="all-team-member">
-                        <!-- <div class="team-member">
-                            <div class="team-member-username white-word">username</div>
-                            <div class="image-cropper">
-                                <img src="/profile-image/01.jpg" class="profilePic" alt="">
-                            </div>
-                        </div> -->
+
+                        <!-- content display to be run in js -->
+
                     </div>
                 </div>
 
@@ -55,8 +53,6 @@
                     <button class="member-list-button open-chatroom" type="button">Chatroom</button>
                 </div>
             </div>
-
-
 
             <div class="chart-and-status">
 
@@ -72,22 +68,18 @@
                             <div class="to-do-list col">
                                 <div class="inside-jira-title white-word">To Do List</div>
                                 <div class="inside-jira-task-box-to-do-list white-word">
-                                    <!-- <div class="inside-jira-task white-word">
-                                        <div class="task-name">aaaaaa</div>
-                                        <div class="task-any-fucking-icon">11111</div>
-                                    </div> -->
+
+                                    <!-- content display to be run in js -->
+
                                 </div>
                             </div>
-
-
 
                             <div class="ongoing col">
                                 <div class="inside-jira-title white-word">Ongoing</div>
                                 <div class="inside-jira-task-box-ongoing white-word">
-                                    <!-- <div class="inside-jira-task white-word">
-                                        <div class="task-name">aaaaaa</div>
-                                        <div class="task-any-fucking-icon">11111</div>
-                                    </div> -->
+
+                                    <!-- content display to be run in js -->
+
                                 </div>
                             </div>
 
@@ -96,24 +88,18 @@
                             <div class="finished col">
                                 <div class="inside-jira-title white-word">Finished</div>
                                 <div class="inside-jira-task-box-finished white-word">
-                                    <!-- <div class="inside-jira-task white-word">
-                                        <div class="task-name">aaaaaa</div>
-                                        <div class="task-any-fucking-icon">11111</div>
-                                    </div> -->
+
+                                    <!-- content display to be run in js -->
+
                                 </div>
                             </div>
-
-
                         </div>
                     </section>
-
                 </div>
             </div>
-
         </article>
 
     </main>
-
 
     <section class="search-user-card">
         <div class="search-wrapper">
@@ -121,11 +107,11 @@
             <input type="search" id="search" placeholder="search user with username or email">
         </div>
         <div class="user-info-list">
+
             <!-- contents to be displayed by js -->
+
         </div>
     </section>
-
-
 
     <main class="chatroom-box" style="display: none;">
         <article id="memberAndMessages" class="row">
@@ -151,19 +137,15 @@
         <button type="button" class="quit-chat">Quit Chat</button>
     </main>
 
-
-
     <div class="outer-user-card"></div>
+
     <div class="user-card"></div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-
 
     <script type="module" src="index.js"></script>
     <script type="module" src="search.js"></script>
